read data from db ok

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,24 +14,24 @@
     <!-- No Baidu Siteapp-->
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
 
-    <link rel="icon" type="image/png" href="assets/i/favicon.png">
+    <link rel="icon" type="image/png" href="http://static.9zhaowo.com/assets/i/favicon.png">
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="192x192" href="assets/i/app-icon72x72@2x.png">
+    <link rel="icon" sizes="192x192" href="http://static.9zhaowo.com/assets/i/app-icon72x72@2x.png">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Amaze UI"/>
-    <link rel="apple-touch-icon-precomposed" href="assets/i/app-icon72x72@2x.png">
+    <link rel="apple-touch-icon-precomposed" href="http://static.9zhaowo.com/assets/i/app-icon72x72@2x.png">
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="assets/i/app-icon72x72@2x.png">
     <meta name="msapplication-TileColor" content="#0e90d2">
 
-    <link rel="stylesheet" href="assets/css/amazeui.min.css">
-    <link rel="stylesheet" href="assets/css/app.css">
+    <link rel="stylesheet" href="http://static.9zhaowo.com/assets/css/amazeui.min.css">
+    <link rel="stylesheet" href="http://static.9zhaowo.com/assets/css/app.css">
 </head>
 <body style="background-color: #F0EFF4;">
     <div class="am-container" style="padding: 0px;">
@@ -49,7 +49,7 @@
 
         <!-- user list -->
         <div id="user_page_list">
-            {{firstPage}}
+            {{#firstPage}}
             <div style="    background-color: #fff;font-family: 微软雅黑;    border: 1px solid #dedede;    -moz-border-radius: 5px;     -webkit-border-radius: 5px;     padding: 5px 5px;margin:5px">
                 <div class="am-g am-intro-bd" style="background-color: white;">
                     <div class="am-intro-left am-u-sm-3">
@@ -59,7 +59,7 @@
                     </div>
                     <div class="am-intro-right am-u-sm-9">
                         <p>姓名：{{name}}</p>
-                        <p>地区：{{area}}</p>
+                        <p>地区：{{city}}</p>
                     </div>
                 </div>
 
@@ -107,7 +107,7 @@
 
     <!-- user_msg start -->
     <div id="user_msg" style="display:none">
-        <img src="img/msg.jpg" width="100%"/><img>
+        <img src="http://static.9zhaowo.com/img/msg.jpg" width="100%"/><img>
 
         <div style="background-color: white; z-index:999; position:fixed; bottom:0; left:0; width:100%; _position:absolute;border-top: 1px solid #CCCCCC;padding-top: 5px;padding-bottom: 5px;height:49px">
             <a href="#" onclick="jump_back()"><i class="am-icon-angle-left am-icon-md" style="padding-left:20px"></i></a>
@@ -212,14 +212,14 @@
 </div>
 
 <!--[if (gte IE 9)|!(IE)]><!-->
-<script src="assets/js/jquery.min.js"></script>
+<script src="http://static.9zhaowo.com/assets/js/jquery.min.js"></script>
 <!--<![endif]-->
 <!--[if lte IE 8 ]>
 <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
 <script src="assets/js/amazeui.ie8polyfill.min.js"></script>
 <![endif]-->
-<script src="assets/js/amazeui.min.js"></script>
+<script src="http://static.9zhaowo.com/assets/js/amazeui.min.js"></script>
 </body>
 </html>
 
