--- a/views/specialist.hbs
+++ b/views/specialist.hbs
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Hello Amaze UI</title>
+    <title>{{name}}&nbsp;&nbsp;{{specialist}}</title>
 
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
@@ -14,24 +14,24 @@
     <!-- No Baidu Siteapp-->
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
 
-    <link rel="icon" type="image/png" href="/assets/i/favicon.png">
+    <link rel="icon" type="image/png" href="http://static.9zhaowo.com/assets/i/favicon.png">
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="192x192" href="/assets/i/app-icon72x72@2x.png">
+    <link rel="icon" sizes="192x192" href="http://static.9zhaowo.com/assets/i/app-icon72x72@2x.png">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Amaze UI"/>
-    <link rel="apple-touch-icon-precomposed" href="/assets/i/app-icon72x72@2x.png">
+    <link rel="apple-touch-icon-precomposed" href="http://static.9zhaowo.com/assets/i/app-icon72x72@2x.png">
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="/assets/i/app-icon72x72@2x.png">
+    <meta name="msapplication-TileImage" content="http://static.9zhaowo.com/assets/i/app-icon72x72@2x.png">
     <meta name="msapplication-TileColor" content="#0e90d2">
 
-    <link rel="stylesheet" href="/assets/css/amazeui.min.css">
-    <link rel="stylesheet" href="/assets/css/app.css">
+    <link rel="stylesheet" href="http://static.9zhaowo.com/assets/css/amazeui.min.css">
+    <link rel="stylesheet" href="http://static.9zhaowo.com/assets/css/app.css">
 </head>
 <body style="background-color: #F0EFF4;">
     <div class="am-container" style="padding: 0px;">
@@ -48,13 +48,13 @@
                 <div class="am-intro-left am-u-sm-5"><img class="am-radius am-img-thumbnail" src="{{avatar}}" alt="小娜" width="120px" height="120px"/></div>
                 <div class="am-intro-right am-u-sm-7">
                     <p>{{name}}</p>
-                    <p>地区：{{area}}</p>
+                    <p>地区：{{city}}</p>
                 </div>
             </div>
 
             <div class="am-g" style="    background-color: white;    margin-top: 2px;    padding-top: 10px;    padding-bottom: 10px;">
                 <div class="am-u-sm-3" style="padding-left:20px">行业</div>
-                <div class="am-u-sm-9" style="padding-left:20px">{{hangye}}</div>
+                <div class="am-u-sm-9" style="padding-left:20px">{{industry}}</div>
             </div>
             <div class="am-g" style="    background-color: white;    margin-top: 2px;    padding-top: 10px;    padding-bottom: 10px;">
                 <div class="am-u-sm-3" style="padding-left:20px">标签</div>
@@ -63,11 +63,11 @@
 
             <div class="am-g" style="background-color: white;    margin-top: 2px;    padding-top: 10px;    padding-bottom: 10px;">
                 <div class="am-u-sm-3" style="padding-left:20px">简介</div>
-                <div class="am-u-sm-9" style="padding-left:20px">{{intro}}</div>
+                <div class="am-u-sm-9" style="padding-left:20px">{{introduce}}</div>
             </div>
 
             <div class="am-g" style="background-color: white;    margin-top: 2px;    padding-top: 10px;    padding-bottom: 10px;">
-                <img src="/img/lv_msg.jpg" width="100%"/><img>
+                <img src="http://static.9zhaowo.com/img/lv_msg.jpg" width="100%"/><img>
             </div>
         </div>
 
@@ -78,14 +78,14 @@
     
      <!-- user_page end -->
     </div>
-    <script src="/assets/js/jquery.min.js"></script>
+    <script src="http://static.9zhaowo.com/assets/js/jquery.min.js"></script>
     <!--<![endif]-->
     <!--[if lte IE 8 ]>
     <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
     <script src="assets/js/amazeui.ie8polyfill.min.js"></script>
     <![endif]-->
-    <script src="/assets/js/amazeui.min.js"></script>
+    <script src="http://static.9zhaowo.com/assets/js/amazeui.min.js"></script>
 </body>
 
 <script type="text/javascript">
